[package]
name = "sucrose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.2", default-features = false, features = ["fuzzy-select"] }
indicatif = "0.17.2"
minreq = { version = "2.6.0", features = ["https-native"] }
scraper = { version = "0.14.0", default-features = false, features = ["deterministic"] }
syntect = { version = "5.0.0", default-features = false, features = ["default-syntaxes", "default-themes", "default-onig"] }
